--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f5f5f5;
             color: #333;
         }
 
         header {
             background-color: #007bff;
-            padding: 1rem;
+            padding: 2rem 0;
             text-align: center;
             color: #fff;
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        p {
+            font-size: 1.2rem;
+            line-height: 1.5;
         }
 
         section {
@@ -27,16 +37,12 @@
             margin: 2rem auto;
             padding: 1.5rem;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
 
-        h1, h2 {
+        h2 {
             color: #007bff;
-        }
-
-        p {
-            line-height: 1.6;
         }
 
         footer {
